phases/phase-2-keycloak/manifests/keycloak-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres
  namespace: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  namespace: identity
spec:
  selector:
    app: keycloak-postgres
  ports:
    - port: 5432
      targetPort: 5432
